[package]
name = "async-tests-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
async-trait = "0.1.61"
futures = "0.3.25"
log = "0.4.17"
rand = "0.8.5"
simple_logger = "4.0.0"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["full"] }
